fixed alignment

--- a/css/books.css
+++ b/css/books.css
@@ -1,6 +1,6 @@
 main {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 
     padding-top: 5vh;
@@ -14,6 +14,7 @@ main {
     justify-content: space-evenly;
 
     padding: 40px 14px 40px 14px;
+	margin-bottom: 40px;
     background-color: var(--background-secondary);
     border-radius: var(--border-radius);
     width: 95vw;
